Tue Sep  2 15:28:03 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/servers_list/run_test.pl:
          Have the test use an iterator when listing servers to be a
          regression test for bug 2843.

Fri Aug 29 20:26:57 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/CDR.cpp:
        * tao/DynamicInterface/DII_Arguments_Converter_Impl.cpp:
        * tao/Messaging/AMI_Arguments_Converter_Impl.cpp:
        * tao/PortableServer/Upcall_Wrapper.cpp:
          Fixed a vulnerability. In cases where errno happened to be
          zero when demarshaling a malformed string (length > available
          buffer) does not result in an exception being raised, rather
          a null char * will be passed to the servant. Also ensured the
          errno is set to a known state as CDR does not set errno in all
          failure cases, but always returns the status of the goodbit,
          so a demashal fail with an errno of zero still needs to raise
          the appropriate MARSHAL exception.

Fri Aug 29 14:13:57 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/TIE/client.cpp:
        * tests/POA/TIE/run_test.pl:
        * tests/POA/TIE/server.cpp:
          Removed ACE_HAS_USING_KEYWORD that define has been removed
          a long time ago, pass -debug also to client and server, looks
          this test is broken, not part of our test suite

Fri Aug 22 15:57:21 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/AMH/Sink_Server/MT_AMH_Server.h:
        * examples/Event_Comm/Consumer_Input_Handler.h:
        * orbsvcs/tests/Security/MT_BiDir_SSL/Client_Task.h:
        * tests/MT_BiDir/Client_Task.h:
        * tests/Stack_Recursion/Server_Task.h:
        * tests/Two_Objects/Second_i.h:
          Correct the include guard macro.

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Profile.cpp:
        * tao/AnyTypeCode/Any_Impl.cpp: