@@ -1,3 +1,11 @@
+Tue Sep  2 17:06:37 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/POA/Persistent_ID/client.cpp:
+          Fixed valgrind reported memory leak
+
+        * tests/POA/TIE/server.cpp:
+          Fixed coverity errors
+
 Tue Sep  2 15:28:03 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * orbsvcs/tests/ImplRepo/servers_list/run_test.pl:
